Merge API updates (#431)
* Adjust request to match UI.

* Update birth city, state, country independently

* Update mortality death city, state, country independently

* Basic test

* Attempt to force rollback for all exceptions

* Add test'

* id generator test

* Additonal testing

* Only update if entries are found. Enable Transaction management

* WIP - race merge

* Merge race

* Race test